fix big play button z-index

--- a/src/css/videojs-hola-skin.less
+++ b/src/css/videojs-hola-skin.less
@@ -54,7 +54,7 @@
             background: none;
         }
     }
-    &:not(.vjs-has-started) .vjs-big-play-button {
+    &.vjs-ima-ad:not(.vjs-has-started) .vjs-big-play-button {
         z-index: 1112;
     }
     &.vjs-paused.vjs-pos-ended {
